--- a/app/views/assignments/show.html.slim
+++ b/app/views/assignments/show.html.slim
@@ -1,14 +1,15 @@
-ol.breadcrumb(style="background-color:white;")
-  li.breadcrumb-item 
-    = link_to "Workspace", account_my_workspace_path(current_user.accounts.first)
-  li.breadcrumb-item 
-    = link_to node_path(@assignment.node.root)
-      = @assignment.node.root.name
-  li.breadcrumb-item 
-    = link_to node_path(@assignment.node.parent.parent)
-      = @assignment.node.parent.parent.name
-  li.breadcrumb-item.active aria-current="page" 
-    = @assignment.node.name
+- if current_user.user_role == "admin"
+  ol.breadcrumb(style="background-color:white;")
+    li.breadcrumb-item 
+      = link_to "Workspace", account_my_workspace_path(current_user.accounts.first)
+    li.breadcrumb-item 
+      = link_to node_path(@assignment.node.root)
+        = @assignment.node.root.name
+    li.breadcrumb-item 
+      = link_to node_path(@assignment.node.parent.parent)
+        = @assignment.node.parent.parent.name
+    li.breadcrumb-item.active aria-current="page" 
+      = @assignment.node.name
 .container(style="margin-top:10px;")
   div.panel.panel-default(style="padding:10px;")
     .row
@@ -45,12 +46,20 @@ ol.breadcrumb(style="background-color:white;")
           strong Description:
           = @assignment.description
       .col-md-4
-        - if @assignment.status != "a"
-          .row(style="margin-top:30px;")
-              = link_to "Approve", assignment_task_review_path(@assignment, status: "approve"), class: "btn btn-default", style: "background-color: green;color:#fff"
-              /=> link_to 'Edit', edit_assignment_path(@assignment)
-              /'|
-          .row(style="margin-top:20px;")
-               = link_to "Review", assignment_task_review_path(@assignment, status: "revision"), class: "btn btn-default", style: "background-color: orange;color:#fff"
+        - if current_user.user_role=="admin"
+          - if @assignment.status != "a"
+            .row(style="margin-top:30px;")
+                = link_to "Approve", assignment_task_review_path(@assignment, status: "approve"), class: "btn btn-default", style: "background-color: green;color:#fff"
+                /=> link_to 'Edit', edit_assignment_path(@assignment)
+                /'|
+            .row(style="margin-top:20px;")
+                 = link_to "Review", assignment_task_review_path(@assignment, status: "revision"), class: "btn btn-default", style: "background-color: orange;color:#fff"
+        - else
+          - if @assignment.status != "wa" || @assignment.status != "a"
+            - if @assignment.status == "r" || @assignment.status == "p"
+              .row(style="margin-top:30px;")
+                  = link_to "Send for Approval", assignment_task_review_path(@assignment, status: "submission"), class: "btn btn-default", style: "background-color: yellow;color:#000"
+                  /=> link_to 'Edit', edit_assignment_path(@assignment)
+                  /'|
   /.col-md-1
       = link_to 'Back', node_path(@assignment.node.root.id), class: "btn btn-default"
