--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -15,19 +15,27 @@ nav.navbar.navbar-default.navbar-fixed-top role="navigation"
     /! Collect the nav links, forms, and other content for toggling
     #navbar-top.collapse.navbar-collapse.hidden-xs
       ul.nav.navbar-nav.navbar-right
-       - if current_user
-          li
-            = link_to "My Account", account_path(current_user.accounts.first)
-          li
-            = link_to "Manage Projects", account_my_workspace_path(current_user.accounts.first)
-          li
-            = link_to "My Tasks", assignments_path
-          /li
-            = link_to "+ New project", new_node_path
-            /a href="dashboard/my_workspace" style="" My Workspace
-          /li
-            a href="/" style=""  My Tasks
-          li = link_to " Sign Out ", destroy_user_session_path, method: :delete,  class: 'main-menu' , style: "color:#e9573f"
-       - else
+        - if current_user 
+          - if current_user.user_role == 'admin'
+            li
+              = link_to "My Account", account_path(current_user.accounts.first)
+            li
+              = link_to "Manage Projects", account_my_workspace_path(current_user.accounts.first)
+            li
+              = link_to "My Tasks", assignments_path
+            /li
+              = link_to "+ New project", new_node_path
+              /a href="dashboard/my_workspace" style="" My Workspace
+            /li
+              a href="/" style=""  My Tasks
+            - if user_signed_in?
+                li = link_to " Sign Out ", destroy_user_session_path, method: :delete,  class: 'main-menu' , style: "color:#e9573f"
+          - else
+            - if user_signed_in?
+                li = link_to " Sign Out ", destroy_user_session_path, method: :delete,  class: 'main-menu' , style: "color:#e9573f"
+            - else
+                li
+                  a.main-menu href="/users/sign_in" style="color:#e9573f"  Sign In
+        - else
           li
             a.main-menu href="/users/sign_in" style="color:#e9573f"  Sign In
