--- a/app/views/nodes/show.html.slim
+++ b/app/views/nodes/show.html.slim
@@ -102,6 +102,15 @@
                         td = assign.end_date
                         td = link_to "Approve", assignment_task_review_path(assignment_id: assign.id, status: "approve")
                         td = link_to "Show", assignment_path(assign), style: "color: #000;"
+                    - elsif assign.status == 'r'
+                      tr(style="background-color:#05ad70;color:#fff")
+                        td = child.name
+                        td = assign.user.name
+                        td = assign.status_display
+                        td = assign.start_date
+                        td = assign.end_date
+                        td = link_to "Approve", assignment_task_review_path(assignment_id: assign.id, status: "approve"), style: "color: #fff;", class: " "
+                        td = link_to "Show", assignment_path(assign), style: "color: #fff;"
                      
 
 
