--- a/app/views/nodes/_user_info.html.slim
+++ b/app/views/nodes/_user_info.html.slim
@@ -1,4 +1,4 @@
-.container(style="padding:20px;background-color:grey;color:#FFF;width:100%")
+.container(style="padding:20px;background-color:#daeddf;color:#000;width:100%")
   .row
     .col-md-6
       | User Name
@@ -16,6 +16,15 @@
       strong = @user.assignments.where(status: "r").count
   .row
     .col-md-6
-      | Approval Pending Task
+      | Approval Pending
     .col-md-6
       strong = @user.assignments.where(status: "wa").count
+  .row
+    .col-md-12
+      - if !@user.hprofile_link.blank?
+          - encoded_url = URI.encode(@user.hprofile_link)
+          - link = URI.parse(encoded_url)
+          - url = link.scheme.blank? ? "https://" + @user.hprofile_link : @user.hprofile_link
+          = link_to url, :target => '_blank', style: "color:#ff6f08"
+            b
+              u  #{truncate(@user.hprofile_link, length: 44, omission:'...')}
